optimize config